[package]
name = "httpie"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1" #error handling
clap =  { version = "4.3.0", features = ["derive"] }#command line interpreter
colored = "2"
jsonxf = "1.1"
mime = "0.3"
reqwest = {version = "0.11", default-features =false, features= ["json", "rustls-tls"]} #http server
tokio = {version = "1", features = ["full"]} #asynchronous handling library
syntect = "5.0.0"